--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,15 +15,15 @@ html {
 :root {
   /* colors */
   --primary-50: #e0fcff;
-  --primary-100: #bef8fd;
-  --primary-200: #87eaf2;
-  --primary-300: #54d1db;
-  --primary-400: #38bec9;
-  --primary-500: #2cb1bc;
-  --primary-600: #14919b;
-  --primary-700: #0e7c86;
-  --primary-800: #0a6c74;
-  --primary-900: #044e54;
+  --primary-100: #e0f0ea;
+  --primary-200: #b0c2cf;
+  --primary-300: #95adbe;
+  --primary-400: #7b72a7;
+  --primary-500: #61588d;
+  --primary-600: #574f7d;
+  --primary-700: #5a3f73;
+  --primary-800: #4d3663;
+  --primary-900: #3c2a4d;
 
   /* grey */
   --grey-50: #f8fafc;
